tests/integration/build/errors/catch.c
/* Code generated using the Orng compiler https://ornglang.org */
#ifndef ORNG_1689128888274750666
#define ORNG_1689128888274750666

#include <math.h>
#include <stdio.h>
#include <stdint.h>

/* Typedefs */

/* Interned Strings */

/* Function forward definitions */
int64_t _2_main();

/* Function definitions */
int64_t _2_main() {
	int64_t _2_$retval;
BB0:
	_2_$retval = 118;
	return _2_$retval;
}


int main()
{
  printf("%ld",_2_main());
  return 0;
}

#endif
